--- a/public/index.html
+++ b/public/index.html
@@ -54,24 +54,13 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-md-3">
-              <p> My Profile </p>
+              <p><b> My Profile </b></p>
               <span> This is my profile</span>
               <br /><span>This includes my personal information</span>
-              <input id="btnAdd" type="button" value="add Element" />
             </div>
             <div class="col-md-9">
-                <p> Write some message </p>
                 <ul class="media-list">
                   <li class="media">
-                    <div class="media-left">
-                      <a href="#">
-                        <img class="media-object" src="http://placehold.it/64x64" alt="image">
-                      </a>
-                    </div>
-                    <div class="media-body">
-                      <h4 class="media-heading">Media heading</h4>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.
-                    </div>
                   </li>
                 </ul>
             </div>
