--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
     <!-- jQuery -->
     <script src="js/libs/jquery.js"></script>
     <script src="js/addElement.js"></script>
+    <script src="js/libs/js.cookie.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/libs/bootstrap.min.js"></script>
