add textarea to enter message

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,12 @@
               <span> This is my profile</span>
               <br /><span>This includes my personal information</span>
             </div>
+            <div>
+              <textarea id="textbox" rows="4" cols="60">
+                This is the placeholder
+              </textarea>
+              <input id="textboxbutton" type="button" value="Tweet" />
+            </div>
             <div class="col-md-9">
                 <ul class="media-list">
                   <li class="media">
